# DeepMiner

./: AI.cpp  AI.h  Bot.cpp  Bot.h  CMakeLists.txt  CoolBot.cpp  CoolBot.h  CringeBot.cpp  CringeBot.h  Game.cpp  Game.h  MiningSite.cpp  MiningSite.h  Player.cpp  Player.h  SwagBot.cpp  SwagBot.h  main.cpp  position.h
